<resources>
    <string name="app_name">ILife</string>
    <string name="key_login">Login</string>
    <string name="key_no_account_yet">No account yet?</string>
    <string name="key_ilife">ILife</string>
    <string name="key_forgot_password">Forgot password?</string>
    <string name="key2_login">Login</string>
    <string name="key_create_account">Create account</string>
    <string name="key_email">Email</string>
    <string name="key_password">Password</string>
    <string name="key_register">Register</string>
    <string name="key_btnregister">Register</string>
    <string name="key_etname">Name</string>
    <string name="key_etsurname">Surname</string>
    <string name="key_etemail">Email</string>
    <string name="key_etpassword">Password</string>
    <string name="key_recovery">Recovery</string>
    <string name="key_btn">Search</string>
    <string name="key_search_by_email">Search by Email:</string>
    <string name="key_recemail">Email</string>
    <string name="key_btnphonesrc">Search</string>
    <string name="key_search_by_phone_number">Search by phone number:</string>
    <string name="key_already_have_an_account">Already have an account?</string>
    <string name="key_log_in">Log in</string>
    <string name="key_email_address_log">Email address</string>
    <string name="key_type_your_email_log">Type your email</string>
    <string name="key_type_your_password_log">Type your password</string>
    <string name="key_password_log">Password</string>
    <string name="key_first_name_PNR">First name</string>
    <string name="key_type_your_first_name_PNR">Type your first name</string>
    <string name="key_last_name_PNR">Last name</string>
    <string name="key_type_yoor_last_name_PNR">Type your last name</string>
    <string name="key_your_phone_number_R">Your phone number</string>
    <string name="key_type_your_phone_number_R">Type your phone number</string>
    <string name="key_type_your_password_PNR">Type your password</string>
    <string name="key_password_PNR">Password</string>
    <string name="key_email_address_E">Email address</string>
    <string name="key_password_ER">Password</string>
    <string name="first_name_E">First name</string>
    <string name="key_type_your_first_name_E">Type your first name</string>
    <string name="key_last_name_E">Last name</string>
    <string name="key_type_your_last_name_E">Type your last name</string>
    <string name="key_type_your_email_E">Type your email</string>
    <string name="key_type_your_password_E">Type your password</string>
    <string name="key_type_in_your_phone_number_log">Your phone number</string>
    <string name="key_type_your_phone_number_log">Type your phone number</string>
    <string name="key_password_log_PN">Password</string>
    <string name="key_type_your_password_log_PN">Type your password</string>
    <string name="key_phone_number">Phone number</string>
</resources>