<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/TVBG"
    tools:context=".PhoneNumFragmentR">

    <TextView
        android:id="@+id/tvNamePNR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/key_first_name_PNR"
        style="@style/TEXT"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNameR"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_first_name_PNR"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvNamePNR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNamePNR" />

    <TextView
        android:id="@+id/tvSurnameR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/key_last_name_PNR"
        style="@style/TEXT"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/etNameR"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSurnameR"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_yoor_last_name_PNR"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvSurnameR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSurnameR"
        app:layout_constraintTop_toBottomOf="@+id/tvSurnameR" />

    <TextView
        android:id="@+id/tvPhoneNumR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_your_phone_number_R"
        style="@style/TEXT"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameR" />

    <EditText
        android:id="@+id/etPhoneNumR"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_phone_number_R"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneNumR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumR" />

    <EditText
        android:id="@+id/etPasswordPNR"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_password_PNR"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPasswordPNR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordPNR" />

    <TextView
        android:id="@+id/tvPasswordPNR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_password_PNR"
        style="@style/TEXT"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumR" />
</androidx.constraintlayout.widget.ConstraintLayout>