<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TVBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailFragmentR"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-219dp">

    <TextView
        android:id="@+id/tvEmailE"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/key_email_address_E"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPasswordER"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/key_password_ER"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etEmailE"
        app:layout_constraintTop_toBottomOf="@+id/etEmailE" />

    <TextView
        android:id="@+id/tvNameE"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/first_name_E"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/etNameE"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_first_name_E"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvNameE"
        app:layout_constraintTop_toBottomOf="@+id/tvNameE" />

    <TextView
        android:id="@+id/tvSurnameE"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_last_name_E"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/etNameE"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/etSurnameE"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_last_name_E"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvSurnameE"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSurnameE"
        app:layout_constraintTop_toBottomOf="@+id/tvSurnameE" />

    <EditText
        android:id="@+id/etEmailE"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_email_E"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvEmailE"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailE" />

    <EditText
        android:id="@+id/etPasswordER"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_type_your_password_E"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvPasswordER"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordER" />

    <TextView
        android:id="@+id/tvRepPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Repeat password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etPasswordER"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordER" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="Repeat your password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvRepPassw"
        app:layout_constraintTop_toBottomOf="@+id/tvRepPassw" />

</androidx.constraintlayout.widget.ConstraintLayout>