<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgotpassword"
    style="@style/SCREEN">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mstile70x70" />

    <TextView
        android:id="@+id/tvForgotPasswIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:text="ILife"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvFPBackground"
        android:layout_width="337dp"
        android:layout_height="493dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        style="@style/TVBG"/>

    <TextView
        android:id="@+id/tvRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/key_recovery"
        style="@style/TEXT"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvFPBackground"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toTopOf="@+id/tvFPBackground" />

    <TextView
        android:id="@+id/tvSrcE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/key_search_by_email"
        style="@style/TEXT"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvRecovery" />

    <EditText
        android:id="@+id/etRecEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="@string/key_recemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvSrcE" />

    <TextView
        android:id="@+id/tvSrcPN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/key_search_by_phone_number"
        style="@style/TEXT"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchEmail" />

    <EditText
        android:id="@+id/etRecPhoneNum"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_et"
        android:ems="10"
        android:hint="(+385) - -  - - -  - - - -"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvSrcPN" />

    <Button
        android:id="@+id/btnSearchEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/key_btn"
        app:layout_constraintEnd_toEndOf="@+id/tvFPBackground"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toBottomOf="@+id/etRecEmail"
        android:backgroundTint="@color/link_blue"/>

    <Button
        android:id="@+id/btnSearchPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/key_btnphonesrc"
        app:layout_constraintEnd_toEndOf="@+id/tvFPBackground"
        app:layout_constraintStart_toStartOf="@+id/tvFPBackground"
        app:layout_constraintTop_toBottomOf="@+id/etRecPhoneNum"
        android:backgroundTint="@color/link_blue"/>
</androidx.constraintlayout.widget.ConstraintLayout>