<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgIconLogin"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mstile70x70" />

    <TextView
        android:id="@+id/tvLoginBackground"
        style="@style/TVBG"
        android:layout_width="337dp"
        android:layout_height="590dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIconLogin"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/key_login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginBackground"
        app:layout_constraintStart_toStartOf="@+id/tvLoginBackground"
        app:layout_constraintTop_toTopOf="@+id/tvLoginBackground" />

    <TextView
        android:id="@+id/tvForgotPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/key_forgot_password"
        android:textColor="@color/link_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/tvNoacc"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="@string/key_no_account_yet"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvLoginBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/link_blue"
        android:text="@string/key_create_account"
        android:textColor="@color/link_blue"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNoacc"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvNoacc" />

    <TextView
        android:id="@+id/tvIconText"
        android:layout_width="71dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:text="@string/key_ilife"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imgIconLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginBackground"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/tvLoginBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumOpt">

    </FrameLayout>

    <TextView
        android:id="@+id/tvEmailOpt"
        style="@style/SuperTheme"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:text="Email"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginBackground"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="@+id/tvLoginBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/tvPhoneNumOpt"
        style="@style/SuperTheme"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"
        android:text="@string/key_phone_number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginBackground"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="@+id/tvLoginBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/link_blue"
        android:text="@string/key_login"
        app:layout_constraintEnd_toEndOf="@+id/tvLoginBackground"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tvLoginBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassw" />

    <ImageView
        android:id="@+id/imgEmailico"
        style="@style/IMG_EMAIL"
        android:layout_width="15dp"
        android:layout_height="14dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:rotationX="1"
        app:layout_constraintEnd_toEndOf="@+id/tvEmailOpt"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/tvEmailOpt"
        app:layout_constraintTop_toTopOf="@+id/tvEmailOpt" />

    <ImageView
        android:id="@+id/imgPhoneNumico"
        style="@style/IMG_PHONE"
        android:layout_width="15dp"
        android:layout_height="14dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhoneNumOpt"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneNumOpt"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneNumOpt"
        app:layout_constraintTop_toTopOf="@+id/tvPhoneNumOpt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvOptEmail"
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tvEmailOpt"
        app:layout_constraintStart_toStartOf="@+id/tvEmailOpt"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailOpt" />

    <TextView
        android:id="@+id/tvOptPhone"
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPhoneNumOpt"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneNumOpt"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumOpt" />


</androidx.constraintlayout.widget.ConstraintLayout>